# mart02

./: .gitignore  README.md  compose.yaml
auth_service/: Dockerfile.dev  pyproject.toml
auth_service/app/: main.py  settings.py
auth_service/app/auth/: user_auth.py
auth_service/app/crud/: crud.py
auth_service/app/models/: user_model.py
auth_service/app/routes/: user_routes.py
inventory_service/: Dockerfile.dev  pyproject.toml
inventory_service/app/: main.py  main1.py  settings.py
inventory_service/app/auth/: user_auth.py
inventory_service/app/crud/: crud.py
inventory_service/app/database/: db.py
inventory_service/app/kafka/: kafka.py  kafka1.py
inventory_service/app/models/: inventory_model.py
inventory_service/app/routes/: inventory_routes.py
nodification_service/: pyproject.toml
nodification_service/app/: main.py  settings.py  utils.py
order_service/app/: main.py  settings.py
order_service/app/crud/: cart_crud.py  crud.py  order_crud.py
order_service/app/database/: db.py
order_service/app/models/: cart_model.py  order_model.py
order_service/app/routes/: routes.py
products_service/app/: main.py
products_service/app/crud/: crud.py
products_service/app/kafka/: kafka.py
products_service/app/models/: product_model.py
products_service/app/routes/: product_routes.py
