[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Muhammad UZair <uzair330@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlmodel = "^0.0.21"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
psycopg = {extras = ["binary"], version = "^3.2.1"}
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240327"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"